Created seed file, fixed some of the bugs uncovered while testing app

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -41,3 +41,7 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 # This gem allows your Svelte application to make requests to your Rails API
 gem 'rack-cors'
+
+
+#For  populating data in the seed file.
+gem 'faker'
