--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fortawesome/fontawesome-free": "^6.4.0"
+		"@fortawesome/fontawesome-free": "^6.4.0",
+		"node-sass": "^9.0.0",
+		"sass": "^1.64.2"
 	}
 }
