--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,16 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"sass": "^1.66.1",
 		"svelte": "^3.54.0",
+		"svelte-preprocess": "^5.0.4",
 		"vite": "^4.2.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.4.0",
+		"@rollup/plugin-json": "^6.0.0",
 		"node-sass": "^9.0.0",
-		"sass": "^1.64.2"
+		"svelte-i18n": "^3.7.0"
 	}
 }
