--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.4.0",
 		"@rollup/plugin-json": "^6.0.0",
+		"bootstrap": "^5.3.2",
 		"node-sass": "^9.0.0",
 		"svelte-i18n": "^3.7.0"
 	}
