--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
 		"@fortawesome/fontawesome-free": "^6.4.0",
 		"@rollup/plugin-json": "^6.0.0",
 		"bootstrap": "^5.3.2",
+		"bootstrap-icons": "^1.11.2",
 		"node-sass": "^9.0.0",
 		"svelte-i18n": "^3.7.0"
 	}
